# self-plugins

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
platform/: CMakeLists.txt
platform/abb/: ABBPlatform.cpp  ABBPlatform.h
platform/abb/gestures/: ABBMoveJointGesture.cpp  ABBMoveJointGesture.h
platform/linux/: CMakeLists.txt
platform/linux/gestures/: LinuxSpeechGesture.cpp  LinuxSpeechGesture.h
platform/linux/sensors/: LinuxMicrophone.cpp  LinuxMicrophone.h
platform/mac/: CMakeLists.txt  MacPlatform.cpp  MacPlatform.h
platform/mac/gestures/: AQSpeechGesture.cpp  AQSpeechGesture.h  MacSoundGesture.cpp  MacSoundGesture.h
platform/mac/sensors/: AQMicrophone.cpp  AQMicrophone.h
platform/mac/services/: MacBrowser.cpp  MacBrowser.h
platform/mac/tests/: TestMacSoundGesture.cpp
platform/nao/: NaoPlatform.cpp  NaoPlatform.h
platform/nao/gestures/: NaoAnimateGesture.cpp  NaoAnimateGesture.h  NaoGraspGesture.cpp  NaoGraspGesture.h  NaoMoveGesture.cpp  NaoMoveGesture.h  NaoMoveJointGesture.cpp  NaoMoveJointGesture.h  NaoPostureGesture.cpp  NaoPostureGesture.h  NaoSoundGesture.cpp  NaoSoundGesture.h  NaoSpeechGesture.cpp  NaoSpeechGesture.h  NaoStatusGesture.cpp  NaoStatusGesture.h  NaoSystemGesture.cpp  NaoSystemGesture.h  NaoVolumeGesture.cpp  NaoVolumeGesture.h
platform/nao/sensors/: Nao3DCamera.cpp  Nao3DCamera.h  NaoCamera.cpp  NaoCamera.h  NaoDepthCamera.cpp  NaoDepthCamera.h  NaoGaze.cpp  NaoGaze.h  NaoGestureSensor.cpp  NaoGestureSensor.h  NaoHealthSensor.cpp  NaoHealthSensor.h  NaoLaser.cpp  NaoLaser.h  NaoMicrophone.cpp  NaoMicrophone.h  NaoMood.cpp  NaoMood.h  NaoSonar.cpp  NaoSonar.h  NaoSpeechToText.cpp  NaoSpeechToText.h  NaoTouch.cpp  NaoTouch.h
platform/nao/services/: NaoBrowser.cpp  NaoBrowser.h  NaoURLService.cpp  NaoURLService.h
platform/nao/tests/: TestLIBQI.cpp  TestNao3DCamera.cpp  TestNaoCamera.cpp  TestNaoGaze.cpp  TestNaoHealthSensor.cpp  TestNaoLaser.cpp  TestNaoMicrophone.cpp  TestNaoMood.cpp  TestNaoPlatform.cpp  TestNaoSonar.cpp  TestNaoSoundGesture.cpp  TestNaoTouch.cpp  TestNaoVolume.cpp
platform/nao/utils/: AlHelpers.cpp  AlHelpers.h  QiHelpers.cpp  QiHelpers.h
platform/raspi/: CMakeLists.txt
platform/raspi/gestures/: RaspiAnimateGesture.cpp  RaspiAnimateGesture.h  RaspiMoveJointGesture.cpp  RaspiMoveJointGesture.h  RaspiSpeechGesture.cpp  RaspiSpeechGesture.h
platform/raspi/sensors/: RaspiMicrophone.cpp  RaspiMicrophone.h
platform/ros/: RosPlatform.cpp  RosPlatform.h
platform/ros/gestures/: RosMoveJointGesture.cpp  RosMoveJointGesture.h
platform/win/: WinPlatform.cpp  WinPlatform.h
(+195 files in other folders)
