include_directories(".")

add_subdirectory(lib)

if(EXISTS lab)
	add_subdirectory(iva)
endif()
if(EXISTS lab)
	add_subdirectory(lab)
endif()
if(EXISTS nexmo)
	add_subdirectory(nexmo)
endif()
if(EXISTS opencv)
	add_subdirectory(opencv)
endif()
if(EXISTS pcl)
	add_subdirectory(pcl)
endif()
if(EXISTS platform)
	add_subdirectory(platform)
endif()
if(EXISTS remote)
	add_subdirectory(remote)
endif()
if(EXISTS rg)
	add_subdirectory(rg)
endif()
if(EXISTS smartthings)
	add_subdirectory(smartthings)
endif()
if(EXISTS watson)
	add_subdirectory(watson)
endif()
if(EXISTS wayblazer)
	add_subdirectory(wayblazer)
endif()

