macro(add_directory_if_exists input)
  get_filename_component(abs_path "${input}" ABSOLUTE)
  if(IS_DIRECTORY ${abs_path})
    add_subdirectory("${abs_path}")
  endif()
endmacro()

include_directories(".")

add_subdirectory(lib)
add_directory_if_exists(iva)
add_directory_if_exists(lab)
add_directory_if_exists(nexmo)
add_directory_if_exists(opencv)
add_directory_if_exists(pcl)
add_directory_if_exists(platform)
add_directory_if_exists(remote)
add_directory_if_exists(rg)
add_directory_if_exists(smartthings)
add_directory_if_exists(watson)
add_directory_if_exists(wayblazer)
